# cratify

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  create-schema-patch.sh  diesel.toml  docker-compose.prod.yml  docker-compose.yml  docker-local.env  docker-prod.env  docker-prod.env.template  local.env
.buildkite/: pipeline.yml
database/: database.sql  init.sql
docs/: developer-guide.md
frontend/: package-lock.json  package.json  tslint.json
frontend/public/: index.html  manifest.json
frontend/src/: About.tsx  App.tsx  Footer.tsx  i18n.js  index.tsx  registerServiceWorker.ts
frontend/src/api-sdk/: request.ts  sdk.ts
frontend/src/components/: About.tsx  AppNav.tsx  Footer.tsx  Login.tsx  Signup.tsx
frontend/src/translations/: en.json
migrations/2018-10-03-205613_cratify_db_initial_setup/: down.sql  up.sql
src/: api.rs  app_env.rs  instrument.rs  main.rs  models.rs  schema.rs
src/app/: error.rs  mod.rs  models.rs
src/db/: dao.rs  exec.rs  mod.rs  models.rs  schema.patch  schema.rs
src/db/exec/: executor.rs  mod.rs  msg.rs
