[package]
authors = ["Tyler Wilcock <tyler.l.wilcock@gmail.com>"]
edition = "2018"
name = "cratify"
version = "0.1.0"


[dependencies]
crates-index = "0.12.0"
job_scheduler = "*"
log = "0.4.5"
rocket = "0.3.16"
rocket_codegen = "0.3.16"
slog = "2.3.3"
slog-scope = "4.0.1"
slog-stdlog = "3.0.2"
slog-term = "2.4.0"
