[package]
authors = ["Tyler Wilcock <tyler.l.wilcock@gmail.com>"]
edition = "2018"
name = "cratify"
version = "0.1.0"

[profile.release]
lto = true

[dependencies]
chrono = "0.4"
crates-index = "0.12.0"
diesel_migrations = "1.3.0"
dotenv = "0.10.1"
job_scheduler = "*"
log = "0.4.5"
r2d2 = "0.8.2"
rocket = "0.3.16"
rocket_codegen = "0.3.16"
slog = "2.3.3"
slog-scope = "4.0.1"
slog-stdlog = "3.0.2"
slog-term = "2.4.0"
uuid = "0.6"

[dependencies.diesel]
version = "1.3.3"
features = ["chrono", "postgres", "r2d2", "uuid"]

[dependencies.diesel-derive-enum]
version = "0.4.4"
features = ["postgres"]

