[package]
name = "cratify"
edition = "2018"
version = "0.1.0"
authors = ["Tyler Wilcock <tyler.l.wilcock@gmail.com>"]
description = "Want to know when another crate depends on yours?  We can notify (cratify!) you when this happens."
homepage = "cratify.io"
repository = "https://github.com/twilco/cratify"
keywords = ["cratesio", "cratify", "cratification"]
categories = ["development-tools"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[profile.release]
lto = true

[dependencies]
actix = "0.7"
actix-web = "0.7"
chrono = "0.4"
crates-index = "0.12.0"
diesel_migrations = "1.3.0"
dotenv = "0.10.1"
failure = "0.1.3"
futures = "0.1"
job_scheduler = "*"
r2d2 = "0.8.3"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
slog = "2.4.1"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-scope = "4.0.1"
slog-stdlog = "3.0.2"
slog-term = "2.4.0"
uuid = "0.6"

[dependencies.diesel]
version = "1.3.3"
features = ["chrono", "postgres", "r2d2", "uuid"]

[dependencies.diesel-derive-enum]
version = "0.4.4"
features = ["postgres"]

[[bin]]
name = "cratify"
path = "src/main.rs"

[[bin]]
name = "instrument"
path = "src/instrument.rs"


